# domain/loginDTO.go
@@ -1,0 +1,6 @@
+package domain
+
+type LoginDTO struct {
+	Email    string `json:"email"`
+	Password string `json:"password"`
+}
