# domain/response/loginResponseDTO.go
@@ -1,0 +1,5 @@
+package response
+
+type LoginResponseDTO struct {
+	BearerToken string `json:"bearer_token"`
+}
